# INF515-CG2_WS25

./: .gitignore  CMakeLists.txt  README.md
task03-triangles/: triangles.cc
task04-two_shaders/: two_shaders.cc
task05-shader_class/: CMakeLists.txt
task06-uniform/: shader.cc  vertex_shader.vs
task13-julia_set/: CMakeLists.txt
task14-rotating_cam/: CMakeLists.txt
